<!DOCTYPE resources [
    <!ENTITY appname "MQTT Hub">
]>
<resources>
    <string name="app_name">&appname;</string>

    <string name="default_dashboard_name">Dashboard</string>

    <string name="cancel">Cancel</string>

    <string name="home_brokers">Brokers</string>
    <string name="home_edit_brokers">Edit brokers</string>
    <string name="home_edit_dashboards">Edit dashboards</string>
    <string name="brokers_empty">There are no brokers yet :(</string>

    <string name="tiles_empty">There are no tiles yet :(</string>

    <string name="add_broker">Add broker</string>
    <string name="edit_broker">Edit broker</string>
    <string name="save">Save</string>
    <string name="broker_name">Broker name</string>
    <string name="broker_address">Address</string>
    <string name="broker_address_hint">100.0.0.1</string>
    <string name="broker_port">Port</string>
    <string name="broker_default_port">1883</string>
    <string name="broker_client_id">Client ID</string>
    <string name="broker_default_client_id">MqttHub-%s</string>

    <string name="remove_selected_tiles">Delete selected tiles?</string>
    <string name="remove_tile">Delete tile?</string>
    <string name="remove_dialog_title">Delete %s?</string>
    <string name="remove_dialog_message">This action cannot be undone</string>
    <string name="remove_dialog_yes">Delete</string>
    <string name="remove_dialog_cancel">Cancel</string>

    <string name="tiles_selected">%d selected</string>

    <string name="new_tile">New tile</string>
    <string name="add_first_broker">Add first broker</string>
    <string name="new_text_tile">New text tile</string>
    <string name="edit_text_tile">Edit text tile</string>
    <string name="new_button_tile">New button</string>
    <string name="edit_button_tile">Edit button</string>
    <string name="new_switch">New switch</string>
    <string name="edit_switch">Edit switch</string>
    <string name="new_chart">New chart</string>
    <string name="edit_chart">Edit chart</string>
    <string name="new_slider">New slider</string>
    <string name="edit_slider">Edit slider</string>
    <string name="tile_name">Tile name</string>
    <string name="subscribe_topic">Subscribe topic</string>
    <string name="publish_topic">Publish topic</string>
    <string name="publish_payload">Payload</string>
    <string name="retain">Retain</string>
    <string name="enable_publishing">Enable publishing</string>
    <string name="on_state">On state</string>
    <string name="off_state">Off state</string>

    <string name="error_failed_to_connect">Failed to connect</string>
    <string name="error_lost_connection_with_broker">Lost connection with %s [%s]</string>
    <string name="error_failed_to_connect_to_broker">Failed to connect to %s [%s]</string>

    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="duplicate">Duplicate</string>
    <string name="change_dashboard_name">Change name</string>
    <string name="dashboard_name">Dashboard name</string>
    <string name="dashboard_actions">Dashboard actions</string>
    <string name="import_dashboard">Import</string>
    <string name="export_dashboard">Export</string>
    <string name="delete_dashboard">Delete</string>

    <string name="add_tile">Add tile</string>
    <string name="tile_type_text">Text</string>
    <string name="tile_type_button">Button</string>
    <string name="tile_type_switch">Switch</string>
    <string name="tile_type_chart">Chart</string>
    <string name="tile_type_slider">Slider</string>

    <string name="tile_size">Tile size</string>
    <string name="tile_fills_screen_width">Tile fills screen width</string>
    <string name="tile_background_style">Tile background style</string>
    <string name="button_tile_style">Button style</string>
    <string name="slider_tile_min_value">Min value</string>
    <string name="slider_tile_max_value">Max value</string>
    <string name="slider_tile_steps_enabled">Slider steps enabled</string>
    <string name="slider_tile_step">Slider step</string>

    <string name="text_tile_size_small">Small</string>
    <string name="text_tile_size_medium">Medium</string>
    <string name="text_tile_size_large">Large</string>

    <string name="tile_style_filled">Filled</string>
    <string name="tile_style_outlined">Outlined</string>
    <string name="tile_style_empty">Empty</string>

    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="connecting">Connecting</string>

    <string name="qos">Quality of service (QoS)</string>
    <string name="qos_0">0</string>
    <string name="qos_1">1</string>
    <string name="qos_2">2</string>

    <string name="toast_tile_duplicated">Tile added to the end of the dashboard</string>
    <string name="toast_tiles_duplicated">Tiles added to the end of the dashboard</string>
    <string name="toast_changes_saved">Changes saved</string>

    <string name="publish_title">Test</string>

    <string name="home_dashboards">Dashboards</string>
    <string name="home_create_new_dashboard">Create new dashboard</string>
    <string name="home_enter_a_dashboard_name">Enter a dashboard name</string>
    <string name="home_add_new_broker">Add new broker</string>
    <string name="home_settings">Settings</string>
    <string name="home_help_and_feedback">Help and feedback</string>
    <string name="home_version">MQTT Hub v%s</string>

    <string name="dashboards_min_items_dialog_message">Can\'t delete the only dashboard</string>
    <string name="dashboards_min_items_dialog_button">OK</string>
    <string name="dashboards_delete_dialog_title">Delete %s?</string>
    <string name="dashboards_delete_dialog_message">This action cannot be undone</string>

    <string name="tile_details_publish">Publish</string>

    <string name="settings_title">Settings</string>
    <string name="settings_appearance">Appearance</string>
    <string name="settings_dynamic_colors">Dynamic colors</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_theme_system">System</string>
    <string name="settings_theme_light">Light</string>
    <string name="settings_theme_dark">Dark</string>

    <string name="dashboard_exported_successfully">Dashboard exported successfully</string>
    <string name="dashboard_imported_successfully">Dashboard imported successfully</string>
    <string name="failed_to_import_dashboard">The file is corrupt and cannot be opened</string>
    <string name="dashboard_deleted">Dashboard deleted</string>

    <string name="remove_dashboard_title">Delete dashboard?</string>
    <string name="remove_dashboard_dialog_message">This action cannot be undone.\n\nExport the dashboard before deleting if you want to restore it later.</string>
    <string name="remove_dashboard_export_button">Export</string>

    <string name="dashboard_name_changed">Dashboard name changed</string>

    <string name="notify_payload_update">Notify payload changes</string>
    <string name="notification_channel_name_payload_updates">Payload updates</string>
    <string name="notification_channel_name_broker_connection">Broker connection</string>

    <string name="notification_required_dialog_title">Notifications permission is required to use this feature</string>
    <string name="notification_required_dialog_message">To be notified about payload updates you have to allow the app to use notifications.\n\nConsider enabling notifications for &appname; manually in settings.</string>
    <string name="notification_required_dialog_settings_button">Go to notification settings</string>

    <string name="broker_connection_service_message_connected">Connected</string>
    <string name="broker_connection_service_message_connecting">Connecting…</string>
    <string name="broker_connection_service_message_connection_failed">Connection failed</string>
    <string name="broker_connection_service_button_disconnect">Disconnect</string>
    <string name="broker_connection_service_button_retry">Retry</string>
    <string name="broker_connection_service_button_dismiss">Dismiss</string>

</resources>