<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?colorSurface">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MQTTHub.AppBarLayout"
        app:liftOnScroll="false"
        app:elevation="0dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/home_edit_brokers"
            app:navigationIcon="@drawable/ic_arrow_back" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        tools:listitem="@layout/list_item_broker"/>

    <TextView
        android:id="@+id/noBrokersText"
        style="@style/TextAppearance.MQTTHub.Body.Secondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/brokers_empty"
        android:textAlignment="center"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/addBrokersButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/add_broker"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="36dp"
        android:layout_marginEnd="24dp"
        app:icon="@drawable/ic_add"
        android:tint="?attr/colorOnSecondary"
        android:contentDescription="@string/add_broker" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>